--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
       <title>Teachinder</title>
 
-      <link rel="stylesheet" href="./css/app.css">
+      <link rel="stylesheet" href="css/app.css">
 
    </head>
 
@@ -462,7 +462,7 @@
                 </div>
             </div>
         </div>
-        <script src="./js/app.js"></script>
+        <script src="js/index.js"></script>
    </body>
 </html>
 
