--- a/src/index.html
+++ b/src/index.html
@@ -166,6 +166,10 @@
                             </div>
                         </div>
                     </div>
+                    <div class="pagination-controls">
+                        <button class="prev-page button">Previous</button>
+                        <button class="next-page button">Next</button>
+                    </div>
                 </div>
             </section>
             <hr>
@@ -445,7 +449,7 @@
                         <div class="profile__info">
                             <div class="profile__image"></div>
                             <div class="profile__details">
-                                <img src="./images/star.svg" class="star-icon" alt="Star icon">
+                                <img src="./images/star.svg" class="star-icon favorite-button" alt="Star icon">
                                 <h2 class="name">Ihor Tkachuk</h2>
                                 <h3 class="specialty">Chemistry</h3>
                                 <p class="city">Kyiv, Ukraine</p>
